@@ -2,6 +2,7 @@
 Issue #1894 Error when creating a new "clean" v18 container
 Issue #1900 Code signing (Sign-NavContainerApp) does not work with a SAS URL
 Issue #1906 Run-AlPipeline / Compile-AppInBcContainer problem
+Unable to install Test Runner in 18.0 online tenant
 
 2.0.11
 Add parameter reUseContainer to Run-AlPipeline to use existing container for the pipeline
